[tool.poetry]
name = "csl"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pywhy-graphs = "0.1.0"
bnlearn = "0.10.4"
causal-learn = "0.1.3.8"
matplotlib = "3.10.3"
scipy = "1.15.3"
pywhy = "0.1.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
